--- a/blog/themes/hexo-theme-moustache/layout/_partial/header.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/header.ejs
@@ -49,9 +49,9 @@ if(page.description) {
   <% if (page.next){ %><link rel="next" href="<%- config.url %><%- url_for(page.next.path) %>" title="<%= page.next.title %>" /><% } %>
   <link rel="start" href="<%- config.url %><%- url_for('entry/') %>" title="Blog Entry" />
   <link rel="stylesheet" href="/public/css/style.css?v=20160223">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/aplayer/1.4.6/APlayer.min.css">
+  <link rel="stylesheet" href="/music/aplayer.css">
   <script src="/public/js/jquery.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/aplayer/1.4.6/APlayer.min.js"></script>
+  <script src="/music/aplayer.js"></script>
   <script src="/public/js/main.js?v=20160223"></script>
 </head>
 <span class="aria-readonly" tabindex="0" aria-hidden="true">小胡子哥的博客良好支持读屏软件阅读，请放心使用。</span>
