--- a/blog/themes/hexo-theme-moustache/layout/index.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/index.ejs
@@ -9,7 +9,7 @@
 		<p><font aria-hidden="true">»</font>
 			<a href="<%- url_for('entry/') %>" aria-label="点击查看博客文章列表">博客</a> <font aria-hidden="true">/</font>
 			<!-- <a href="https://github.com/barretlee/slides#slides" aria-label="小胡子哥的演讲" target="_blank">演讲</a> <font aria-hidden="true">/</font> -->
-			<a href="<%- url_for('/blog/2016/07/14/question-and-answer/') %>" aria-hidden="true">提问</a> <font aria-hidden="true">/</font>
+			<a href="<%- url_for('/reading.html') %>" aria-hidden="true">推荐</a> <font aria-hidden="true">/</font>
 			<a href="<%- url_for('demo/') %>" aria-label="小胡子哥的实验室">实验</a> <font aria-hidden="true">/</font>
 			<a href="<%- url_for('about/') %>" aria-label="查看小胡子哥的个人信息">关于</a>
 		</p>
