Add fallback monospaced font

--- a/blog/themes/hexo-theme-moustache/source/public/css/_utils/reset.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_utils/reset.styl
@@ -15,7 +15,7 @@ button, input, select, textarea /* for ie */ {
 }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
 address, cite, dfn, em, var { font-style: normal; } /* 将斜体扶正 */
-code, kbd, pre, samp { font-family: consolas; } /* 统一等宽字体 */
+code, kbd, pre, samp { font-family: consolas, monospace; } /* 统一等宽字体 */
 small { font-size: 12px; } /* 小于 12px 的中文很难阅读，让 small 正常化 */
 
 /** 重置列表元素 **/
