--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/comment.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/comment.ejs
@@ -8,6 +8,7 @@
 <div class="nav-detail">
 	<div tabindex="0" aria-hidden="true">
 		<%- partial("duoshuo") %>
+		<%- partial("changyan") %>
 	</div>
 	<div style="display:block;">
 		<div class="relative-to-comment" tabindex="0" aria-hidden="true"><span>（点击评论）</span>古今多少事，都付笑谈中！</div>
