--- a/blog/themes/hexo-theme-moustache/source/public/css/style.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/style.styl
@@ -1,6 +1,7 @@
 @import "_variables"
 
 @import "_partial/duoshuo.embed"
+@import "_partial/changyan"
 
 @import "_utils/reset"
 @import "_utils/font"
