chore(styles): 样式增强,功能补充

--- a/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
@@ -30,7 +30,7 @@
       <div class="post-content" itemprop="articleBody">
         <div class="shit-spider" title="防爬虫不注明出处" tabindex="0" aria-hidden="true">
           <p>原文地址：<a href="<%- config.url %><%- url_for(page.path) %>"><%- config.url %><%- url_for(page.path) %></a>，<a href="<%- config.url %><%- url_for(page.path) %>#comments">参与评论</a></p>
-          <img src="//www.barretlee.com/blogimgs/avatar.png" width="150">
+          <img src="/blogimgs/avatar.png" width="150">
         </div>
         <%- page.content %>
       </div>
