--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/gitalk.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/gitalk.styl
@@ -1,9 +1,41 @@
 #gitalk {
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
-
 .footer .gt-container .gt-meta {
-  border-color: #757575
+  border-color: #757575;
+  color: #CCC;
+}
+.footer .gt-container .gt-comments-null {
+  color: #CCC;  
+}
+.footer .gt-container .gt-ico {
+  opacity: 0.8;
+}
+.footer .gt-container .gt-comment-content,
+.footer .gt-container .gt-comment-admin .gt-comment-content {
+  background: #F2F2F2;
+}
+.gt-container .gt-comment-content .gt-comment-body.markdown-body p {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 28px;
+  font-size: 14px;
+}
+.gt-container .gt-comments-null {
+  font-size: 14px;
+}
+.gt-container .markdown-body blockquote {
+  font-size: 13px;
+}
+.gt-container .gt-container .gt-comment-text,
+.gt-container .gt-container .gt-comment-date {
+  font-size: 12px;
+}
+.gt-container .gt-meta {
+  font-size: 14px;
+}
+.gt-container .gt-comment-content {
+  border-radius: 4px;  
 }
 
 @font-face {
