--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
@@ -16,6 +16,10 @@
 		<li>版权声明: 署名-非商业性使用-禁止演绎 3.0 国际（<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">CC BY-NC-ND 3.0</a>）</li>
 		<li>最后编辑时间: <%- moment(page.updated).format('YYYY-MM-DD HH:mm:ss') %></li>
 		<li>Feed 订阅: <a href="<%- theme.pages.feed %>"><i class="icon">&#x25c8;</i></a></li>
+		<li style="opacity: 0.3; text-align: right;">
+			编辑本文：<a href="<%- theme.source_edit %><%- moment(page.date).format('YYYY-MM-DD') %>-<%- page.slug %>.md" target="_blank" aria-hidden="true"><i class="icon">&#xe622;</i></a>；
+			新建文章：<a href="<%- theme.source_new %>" target="_blank" aria-hidden="true"><i class="icon">&#xe616;</i></a>
+		</li>
 	</ul>
 	<a href="<%- url_for('about/') %>"><img src="<%- theme.imgs.avatar150 %>" /></a>
 </div>
