--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/gitalk.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/gitalk.ejs
@@ -23,7 +23,12 @@
     body: '原文地址：' + location.href + '\n\n文摘：' + postContent || header.meta[description],
     distractionFreeMode: false
   });
-  gitalk.render('gitalk');
+
+  window.addEventListener('load', function() {
+    setTimeout(function() {
+      gitalk.render('gitalk');
+    }, 2E3);
+  });
 
   // show count
   var commentTimer = setInterval(() => {
