--- a/blog/themes/hexo-theme-moustache/layout/index.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/index.ejs
@@ -2,7 +2,7 @@
 	<div class="home-color-bg"></div>
 	<div class="home-box">
 		<h2 title="<%- config.subtitle %>" id='indexLogo'>
-			<%- config.title %>
+			小胡子哥的个人网站
 			<a aria-hidden='true' href="<%- url_for('entry/') %>"><img src="<%- url_for(theme.imgs.avatar150) %>" alt="<%- config.author %>"></a>
 		</h2>
 		<h3 title="<%- config.subtitle %>" aria-hidden="true"><%- config.title_en %></h3>
