--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/gitalk.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/gitalk.styl
@@ -1,6 +1,9 @@
 #gitalk {
   margin-bottom: 50px;
 }
+#gitalk .email-hidden-reply {
+  display: none !important;
+}
 .footer .gt-container .gt-meta {
   border-color: #757575;
   color: #CCC;
