--- a/blog/themes/hexo-theme-moustache/layout/_page/about.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_page/about.ejs
@@ -6,7 +6,7 @@
 			<%- partial("../_partial/dropdown") %>
 		</h2>
 		<div>
-			<strong class="title">关于我<span> <font aria-hidden="true" tabindex="0">/ About Me</font></span></strong>
+			<strong class="title">一个有趣的灵魂<span> <font aria-hidden="true" tabindex="0">/ About Me</font></span></strong>
 			<div>
 				<a class="site-avatar" href="<%- url_for(theme.imgs.avatar) %>"><img src="<%- url_for(theme.imgs.avatar150) %>" height="100" width="100" alt="<%- config.author %>"></a>
 				<p>My name is Lee Jing(李靖). You can call me Barret. I was born in 1992.</p>
