fix: remove useless code

--- a/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
@@ -23,9 +23,7 @@
         <span tabindex="0" aria-hidden="true">评论数: <a href="#comments"
                       class="ds-thread-count hash-to-comments disqus-comment-count"
                       data-thread-key="<%- page.slug || page.path %>"
-                      data-disqus-identifier="<%- page.slug || page.path %>"
-                      id="changyan_count_unit"></a></span>
-        <span tabindex="0" aria-hidden="true" id="busuanzi_container_site_pv">热度: <span id="busuanzi_value_page_pv"></span></span>
+                      data-disqus-identifier="<%- page.slug || page.path %>"></a></span>
       </div>
       <div class="post-content" itemprop="articleBody">
         <div class="shit-spider" title="防爬虫不注明出处" tabindex="0" aria-hidden="true">
