--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/webinfo.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/webinfo.ejs
@@ -8,6 +8,6 @@ try {
 <div class="website-info" aria-hidden="true">
 	<a class="page_editor" href="/admin/#/<%- path %>" target="_blank">🙈</a>
 	<span>&copy;2013-<%- moment(new Date).format("YYYY")%> <small><a href="http://www.miitbeian.gov.cn/" about="_blank">湘ICP备14007107号-1</a></small></span>
-	本站由 <a href="<%- url_for("/") %>"><%- config.author %></a> 纯手工打造 | <a href="<%- url_for('about') %>#contact">联系方式</a> | 总热度：<em id="busuanzi_value_site_pv"></em>
+	本站由 <a href="<%- url_for("/") %>"><%- config.author %></a> 纯手工打造 | <a href="<%- url_for('about') %>#contact">联系方式</a>
 	<a href='https://union.zhaodao.ai/#random' title="随机跳转到一个有意思的网站" target='_blank' class="zhidao_ai"><img src='https://union.zhaodao.ai/icon.black.svg' width="20" height="20"></a>
 </div>
