--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
@@ -3,27 +3,26 @@
 <div class="copyright" itemscope itemtype="http://schema.org/ProfilePage" tabindex="0" aria-hidden="true">
 	<!-- <a href="/about/#support" class="supportme">赏</a> -->
 	<ul>
-		<li>作者:  <a href="<%- url_for('about/') %>" itemprop="name"><%- theme.author %></a></li>
-		<li>发表日期: <%- moment(page.date).format('YYYY-MM-DD HH:mm:ss') %></li>
-		<% if (page.categories && page.categories.length) {%>
+		<li>作者: <a href="<%- url_for('about/') %>" itemprop="name"><%- theme.author %></a></li>
+		<% if (page.categories && page.categories.data.length) {%>
 		<li>文章分类: <%- partial('category', {post: page}) %></li>
 		<% } %>
-		<% if (page.tags && page.tags.length) {%>
+		<% if (page.tags && page.tags.data.length) {%>
 		<li>文章标签: <%- partial('tag', {post: page}) %></li>
 		<% } %>
-		<%
-		  var path = page.path.split('/');
-			var title = path[path.length - 2];
-			var url = '/raw/posts/' + moment(page.date).format('YYYY-MM-DD-') + title + '.md';
-		%>
-		<li>版权声明: 署名-非商业性使用-禁止演绎 3.0 国际（<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">CC BY-NC-ND 3.0</a>）</li>
+		<li>发表日期: <%- moment(page.date).format('YYYY-MM-DD HH:mm:ss') %></li>
 		<li>最后编辑时间: <%- moment(page.updated).format('YYYY-MM-DD HH:mm:ss') %></li>
-		<li>本文 Markdown 地址: <a href="<%- url %>" target="_blank"><%- post.title %>.md</a></li>
-		<li>Feed 订阅: <a href="<%- theme.pages.feed %>"><i class="icon">&#x25c8;</i></a></li>
-		<li style="opacity: 0.3; text-align: right;">
-			编辑本文：<a href="<%- theme.source_edit %><%- moment(page.date).format('YYYY-MM-DD') %>-<%- page.slug %>.md" target="_blank" aria-hidden="true"><i class="icon">&#xe622;</i></a>；
-			新建文章：<a href="<%- theme.source_new %>" target="_blank" aria-hidden="true"><i class="icon">&#xe616;</i></a>
+		<li>本文 Markdown 地址: <a target="_
+			" href="<%- theme.source_tree %><%- moment(page.date).format('YYYY-MM-DD') %>-<%- page.slug %>.md"><%- post.title %></a></li>
+		<li>版权声明: 署名-非商业性使用-禁止演绎 3.0 国际（<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">CC BY-NC-ND 3.0</a>）</li>
+		<li>
+			Feed 订阅: <a href="<%- theme.pages.feed %>"><i class="icon">&#x25c8;</i></a>
+			<div style="opacity: 0.3; text-align: right; margin: 5px -15px -10px 0; float: right;">
+				编辑本文：<a href="<%- theme.source_edit %><%- moment(page.date).format('YYYY-MM-DD') %>-<%- page.slug %>.md" target="_blank" aria-hidden="true"><i class="icon">&#xe622;</i></a>；
+				新建文章：<a href="<%- theme.source_new %>" target="_blank" aria-hidden="true"><i class="icon">&#xe616;</i></a>
+			</div>
 		</li>
+		
 	</ul>
 	<a href="<%- url_for('about/') %>"><img src="<%- theme.imgs.avatar150 %>" /></a>
 </div>
