--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
@@ -190,6 +190,8 @@ h1 {
   overflow: hidden;
   //border-radius: 4px;
   //box-shadow: 0 0 30px #ccc;
+  margin: 10px 0;
+  max-height: 520px;
 }
 .post-content hr {
   margin-bottom: 30px;
