--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/entry.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/entry.styl
@@ -65,7 +65,7 @@
   font-size: 22px;
   font-weight: normal;
   border-bottom: 1px dashed #CCC;
-  width: 590px;
+  // width: 590px;
   max-width 100%;
   line-height: 2;
   margin-bottom: 15px;
