--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/search.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/search.styl
@@ -2,6 +2,8 @@
   position: relative;
   text-align: left;
   margin-bottom: 10px;
+  border-radius: 6px;
+  overflow: hidden;
 }
 
 .local-search-input-cls {
