--- a/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
@@ -54,14 +54,20 @@
 
   .entry-wrapper {
     margin: 50px auto;
-    max-width: 640px;
+    max-width: 92%;
+  }
+
+  .rightbar {
+    float: none;
   }
   .entry-cates {
-    width: 607px;
-    float: left;
+    width: auto;
+    float: none;
   }
   .entry-recent-post,.entry-recent-posts {
-    width: 600px;
+    width: auto;
+    max-width: 100%;
+    float: none;
   }
   .entry-cates li {
     display: inline-block;
@@ -138,12 +144,16 @@
     margin: 50px auto;
     max-width: 590px;
   }
+
+  .rightbar {
+    float: none;
+  }
   .entry-cates {
-    width: 547px;
-    float: left;
+    width: auto;
+    float: none;
   }
   .entry-recent-post, .entry-recent-posts {
-    width: 540px;
+    width: auto;
   }
   .arrow-tips {
     display: none;
@@ -363,14 +373,17 @@
   }
   .entry-wrapper {
     margin: 30px auto;
-    max-width: 520px;
+    max-width: 92%;
+  }
+  .rightbar {
+    float: none;
   }
   .entry-cates {
-    width: 487px;
-    float: left;
+    width: auto;
+    float: none;
   }
   .entry-recent-post,.entry-recent-posts {
-    width: 480px;
+    width: auto;
   }
   .highlight pre .code, .highlight .code pre, figure span, figure {
     font-size: 14px;
@@ -443,8 +456,11 @@
       height: 50px;
     }
   }
+  .rightbar {
+    float: none;
+  }
   .home-box {
-    width: 310px;
+    width: 92%;
     margin-left: -175px;
   }
   .cate-header .cate-list {
@@ -457,17 +473,15 @@
   }
   .entry-wrapper {
     margin: 30px auto;
-    max-width: 345px;
+    max-width: 92%;
   }
   .entry-cates {
-    width: 310px;
-    float: left;
+    width: auto;
+    float: none;
   }
-  .entry-recent-post {
-    width: 300px;
-  }
+  .entry-recent-post,
   .entry-recent-posts {
-    width: 340px;
+    width: auto;
   }
   .relative-article ul {
     div {
@@ -494,6 +508,9 @@
     padding: 6px;
     font-size: 14px;
   }
+  .rightbar {
+    float: none;
+  }
   .home-box h3 {
     margin-bottom: 20px;
   }
@@ -510,13 +527,14 @@
   }
   .entry-wrapper {
     margin: 30px auto;
-    max-width: 290px;
+    max-width: 92%;
   }
   .entry-cates {
-    width: 257px;
-    float: left;
+    width: auto;
+    float: none;
   }
-  .entry-recent-post,.entry-recent-posts {
-    width: 250px;
+  .entry-recent-post,
+  .entry-recent-posts {
+    width: auto;
   }
 }
