fix: article style

--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
@@ -470,6 +470,9 @@ table td, table th {
       border-bottom-color: #E58C7C;
       transition: all 0.3s;
     }
+    img {
+      align-self: flex-start;
+    }
   }
 }
 .relative-to-comment-wrapper {
