--- a/blog/themes/hexo-theme-moustache/layout/_page/about.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_page/about.ejs
@@ -78,9 +78,8 @@
     -->
 		</div>
 		<div class="aboutme-modify-time text-info" tabindex="0" aria-hidden="true">
-			最后修改时间：<%- moment(page.updated).format("YYYY年MM月DD日 HH:mm:ss") %>
+			站点最后修改时间：<%- moment(page.updated).format("YYYY年MM月DD日 HH:mm:ss") %>
 		</div>
-		<span class="aria-readonly">最后修改时间：<%- moment(page.updated).format("YYYY年MM月DD日 hh时mm分ss秒") %></span>
 		<%- partial("page_footer") %>
 	</div>
 </div>
