fix: gitalk property is not found

--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/gitalk.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/gitalk.ejs
@@ -1,10 +1,4 @@
-<% if(theme.gitalk) { 
-  var ptags = [];
-  var post = post || { tags: { data: [] } };
-  for(key in post.tags.data) {
-    ptags.push(post.tags.data[key].name);
-  }  
-%>
+<% if(theme.gitalk) { %>
   <div id="gitalk" sid="<%- page.slug || page.path || 'barretlee-blog' %>"></div>
   <script charset="utf-8" type="text/javascript" src="/public/js/gitalk.js"></script>
   <script type="text/javascript">
@@ -21,9 +15,6 @@
     perPage: 100,
     createIssueManually: false,
     repo: 'blog',
-    labels: [
-      <% ptags.forEach(function(tag) { %> "<%- tag %>",  <% }) %>
-    ],
     owner: 'barretlee',
     admin: ['barretlee'],
     id: "<%- page.slug || page.path || 'barretlee-blog' %>",
