fix: replace font-face cdn address

--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/aplayer.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/aplayer.styl
@@ -1,10 +1,10 @@
-@font-face {
-  font-family: aplayer-fontello;
-  src: url(/public/fonts/aplayer.eot?72550380);
-  src: url(/public/fonts/aplayer.eot?72550380#iefix) format("embedded-opentype"), url(/public/fonts/aplayer.woff?72550380) format("woff"), url(/public/fonts/aplayer.ttf?72550380) format("truetype"), url(/public/fonts/aplayer.svg?72550380#fontello) format("svg");
-  font-weight: 400;
-  font-style: normal
-}
+// @font-face {
+//   font-family: aplayer-fontello;
+//   src: url(/public/fonts/aplayer.eot?72550380);
+//   src: url(/public/fonts/aplayer.eot?72550380#iefix) format("embedded-opentype"), url(/public/fonts/aplayer.woff?72550380) format("woff"), url(/public/fonts/aplayer.ttf?72550380) format("truetype"), url(/public/fonts/aplayer.svg?72550380#fontello) format("svg");
+//   font-weight: 400;
+//   font-style: normal
+// }
 .aplayer-narrow {
   width: 66px
 }
