--- a/blog/themes/hexo-theme-moustache/source/public/css/_utils/font.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_utils/font.styl
@@ -1,10 +1,18 @@
+// @font-face {
+//   font-family: "iconfont";
+//   src: url('../fonts/iconfont.eot');
+//   src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
+//   url('../fonts/iconfont.woff') format('woff'),
+//   url('../fonts/iconfont.ttf') format('truetype'),
+//   url('../fonts/iconfont.svg#iconfont') format('svg');
+// }
 @font-face {
-  font-family: "iconfont";
-  src: url('../fonts/iconfont.eot');
-  src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/iconfont.woff') format('woff'),
-  url('../fonts/iconfont.ttf') format('truetype'),
-  url('../fonts/iconfont.svg#iconfont') format('svg');
+  font-family: 'iconfont';  /* Project id 3398 */
+  src: url('https://at.alicdn.com/t/font_1467606111_4082787.eot');
+  src: url('https://at.alicdn.com/t/font_1467606111_4082787.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_1467606111_4082787.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_1467606111_4082787.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_1467606111_4082787.svg#iconfont') format('svg');
 }
 .icon {
   font-family:"iconfont" !important;
