fix: remove search insite

--- a/blog/themes/hexo-theme-moustache/layout/_page/entry.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_page/entry.ejs
@@ -4,7 +4,7 @@
 		<a href="/" tabindex="0" aria-label="回到小胡子哥首页导航"><%- config.author %></a> <font aria-hidden="true">» 博客</font>
 		<%- partial("../_partial/dropdown") %>
 		<%- partial("../_partial/post/rss.ejs") %>
-		<span class="entry-page-search local-search-google local-search">
+		<span class="entry-page-search local-search-google local-search" style="display: none;">
         <input type="text" placeholder="站内搜索" id="local-search-input">
         <i class="icon" aria-hidden="true" title="点击进入 Google 搜索">&#x2708;</i>
 				<div id="local-search-result" class="local-search-result-cls"></div>
