fix: remove search insite

--- a/blog/themes/hexo-theme-moustache/layout/_partial/search.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/search.ejs
@@ -1,4 +1,4 @@
-<span class="local-search local-search-google local-search-plugin" style="position:absolute;right: 20px;top:30px;<%- wrapStyle %>">
+<span class="local-search local-search-google local-search-plugin" style="display: none;">
   <input type="search" placeholder="站内搜索" id="local-search-input" class="local-search-input-cls" style="<%- inputStyle %>">
   <i class="icon" aria-hidden="true" title="点击进入 Google 搜索">&#x2708;</i>
   <div id="local-search-result" class="local-search-result-cls"></div>
