fix: add jsdelivr cdn

--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/entry.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/entry.styl
@@ -23,7 +23,7 @@
 }
 .rightbar-frame {
   height: 352px;
-  background: #FAFAFA url("/blogimgs/loading.gif") center center no-repeat;
+  background: #FAFAFA url("https://img.alicdn.com/imgextra/i4/O1CN01Czgiur21V0xDDZVK1_!!6000000006989-1-tps-1200-1200.gif") center center no-repeat;
   border: 1px solid #CCC;
 }
 .entry-recent-post {
