--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
@@ -14,7 +14,7 @@
 		<li>最后编辑时间: <%- moment(page.updated).format('YYYY-MM-DD HH:mm:ss') %></li>
 		<li>本文 Markdown 地址: <a target="_
 			" href="<%- theme.source_tree %><%- moment(page.date).format('YYYY-MM-DD') %>-<%- page.slug %>.md"><%- post.title %></a></li>
-		<li>版权声明: 署名-非商业性使用-禁止演绎 3.0 国际（<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">CC BY-NC-ND 3.0</a>）</li>
+		<li><a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">CC BY-NC-ND 3.0</a></li>
 		<li>
 			Feed 订阅: <a href="<%- theme.pages.feed %>"><i class="icon">&#x25c8;</i></a>
 			<div style="opacity: 0.3; text-align: right; margin: 5px -15px -10px 0; float: right;">
