--- a/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
@@ -125,6 +125,9 @@
 }
 
 @media screen and (max-width: 800px) {
+  .post-content p {
+    font-size: 15px;
+  }
   .local-search {
     display: none;
   }
@@ -305,7 +308,7 @@
     padding-left: 0;
   }
   .post-title {
-    font-size: 32px;
+    font-size: 26px;
     line-height: 48px;
     margin-bottom 10px;
   }
@@ -315,7 +318,7 @@
     vertical-align: top;
   }
   .post-content p, .post-content blockquote, .post-content .highlight, .post-content div {
-    margin-bottom 20px;
+    margin-bottom 15px;
   }
   .post-content table {
     margin-bottom 0;
@@ -340,7 +343,7 @@
     padding-top:10px;
   }
   .post {
-    font-size: 16px;
+    font-size: 15px;
     line-height: 28px;
   }
   .footer-wraper {
