fix: force update cache

--- a/blog/themes/hexo-theme-moustache/layout/layout.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/layout.ejs
@@ -5,7 +5,7 @@
   <%- body %>
 </body>
 <script src="/public/js/jquery.js"></script>
-<script src="/public/js/index.js?v=20230626"></script>
+<script src="/public/js/index-20230626.js"></script>
 <script>
   window.onerror = function(e) {
     window.console && window.console.log && window.console.log(e);
