fix: add analysis tool

--- a/blog/themes/hexo-theme-moustache/layout/layout.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/layout.ejs
@@ -7,6 +7,15 @@
 <script src="/public/js/jquery.js"></script>
 <script src="/public/js/main-20230626.js"></script>
 <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3524fff9629f2c80f8ea5daa13e67003";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+<script>
   window.onerror = function(e) {
     window.console && window.console.log && window.console.log(e);
     $('#loadLayer').remove();
