--- a/blog/themes/hexo-theme-moustache/layout/index.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/index.ejs
@@ -31,4 +31,5 @@
 
 <!-- <p style="position: absolute;font-size: 12px;bottom: 2px;color: #CCC;left: 2px;opacity: 0.4;
 -webkit-user-select:none;">Hosted by <a href="https://pages.coding.me" style="font-weight: bold" target="_blank" ref="external">Coding Pages</a></p> -->
+<a href="http://www.miitbeian.gov.cn/" target="_blank" style="position: absolute;bottom: 8px;right: 12px;font-size: 12px;color: #FFF;opacity: 0.6;">湘ICP备14007107号-1</a>
 
