--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
@@ -149,14 +149,19 @@ h1 {
 .post blockquote ul, .post blockquote ol {
   margin: 10px 0 10px 35px;
 }
-.post-content h3,.post-content h4, .post-content h5 {
+.post-content h2,.post-content h3,.post-content h4, .post-content h5 {
   margin-bottom 15px;
   font-weight: normal;
 }
-.post-content h3 {
+.post-content h2 {
   font-size: 32px;
   line-height: 64px;
   margin-top: 50px;
+}
+.post-content h3 {
+  font-size: 28px;
+  line-height: 56px;
+  margin-top: 40px;
 }
 .post-content h4 {
   font-size: 24px;
