--- a/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
@@ -125,8 +125,20 @@
 }
 
 @media screen and (max-width: 800px) {
+  .post-info {
+    margin-bottom: 20px;
+  }
+  .post-content {
+    padding: 0 8px;
+  }
+  .relative-article {
+    margin-top: -10px;
+  }
   .post-content p {
-    font-size: 15px;
+    font-size: 16px;
+  }
+  .post-content p, .post-content blockquote, .post-content .highlight, .post-content div {
+    margin-bottom 25px;
   }
   .local-search {
     display: none;
@@ -316,9 +328,6 @@
     width: 480px;
     max-width: 74%;
     vertical-align: top;
-  }
-  .post-content p, .post-content blockquote, .post-content .highlight, .post-content div {
-    margin-bottom 15px;
   }
   .post-content table {
     margin-bottom 0;
