fix: remove useless code

--- a/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
@@ -3,7 +3,7 @@
     display: none;
   }
   .article {
-    paddint-top: 70px;
+    padding-top: 70px;
   }
 }
 @media screen and (max-width: 991px) {
