--- a/blog/themes/hexo-theme-moustache/layout/_partial/dropdown.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/dropdown.ejs
@@ -1,7 +1,7 @@
 <em  class="arrow-expend" tabindex="0" aria-hidden="0" aria-label="点击展开网页导航" aria-selected="true" aria-lable="网页导航" aria-expanded="false" id="i1">▾
 <ul role="group" aria-labelledby="i1" aria-expanded="false">
   <li><a href="<%- url_for("/entry/") %>">博客</a></li>
-  <li><a href="<%- url_for("/translation/") %>">翻译</a></li>
+  <!-- <li><a href="<%- url_for("/translation/") %>">翻译</a></li> -->
   <li><a href="<%- url_for("/message/") %>">留言</a></li>
   <li><a href="<%- url_for("/demo/") %>">实验室</a></li>
   <!-- <a><a href="<%- url_for("/comments/") %>">最近评论</a></li> -->
