--- a/blog/themes/hexo-theme-moustache/layout/index.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/index.ejs
@@ -7,23 +7,20 @@
 		</h2>
 		<h3 title="<%- config.subtitle %>" aria-hidden="true"><%- config.title_en %></h3>
 		<p><font aria-hidden="true">»</font>
-			<a href="<%- url_for('entry/') %>" aria-label="点击查看博客文章列表">博客</a> <font aria-hidden="true"> / </font>
-			<!-- <a href="https://github.com/barretlee/slides#slides" aria-label="小胡子哥的演讲" target="_blank">演讲</a> <font aria-hidden="true">/</font> -->
-			<a href="<%- url_for('message/') %>" aria-label="给小胡子哥留言">留言</a> <font aria-hidden="true"> / </font>
-			<!-- <a href="<%- url_for('translation/') %>" aria-label="点击查看译文列表">翻译</a> <font aria-hidden="true"> / </font> -->
+			<a href="<%- url_for('entry/') %>">博客</a> <font aria-hidden="true"> / </font>
+			<a href="<%- url_for('message/') %>">留言</a> <font aria-hidden="true"> / </font>
+			<a href="<%- url_for('about/') %>">关于</a>
+			<!-- <a href="https://github.com/barretlee/slides#slides" target="_blank">演讲</a> <font aria-hidden="true">/</font> -->
+			<!-- <a href="<%- url_for('translation/') %>">翻译</a> <font aria-hidden="true"> / </font> -->
 			<!-- <a href="<%- url_for('/reading.html') %>" aria-hidden="true">推荐</a> <font aria-hidden="true">/</font>-->
-			<a href="<%- url_for('demo/') %>" aria-label="小胡子哥的实验室">实验</a> <font aria-hidden="true"> / </font>
-			<a href="<%- url_for('about/') %>" aria-label="查看小胡子哥的个人信息">关于</a>
-      <!--  <font aria-hidden="true">/</font>
-			<a href="https://baby.barretlee.com" target="_blank" aria-label="小豆芽">Baby</a> -->
+			<!-- <a href="<%- url_for('demo/') %>">实验</a> <font aria-hidden="true"> / </font> -->
 		</p>
 		<p><font aria-hidden="true">»</font>
-			<i class="icon" title="Github"><a href="<%- theme.social.github %>" target="_blank" aria-label="小胡子哥的 Github 地址">&#x2603;</a></i>
-			<i class="icon" title="Sina Weibo"><a href="<%- theme.social.weibo %>" target="_blank" aria-label="小胡子哥的新浪微博地址">&#x535a;</a></i>
-			<i class="icon" title="Twitter"><a href="<%- theme.social.twitter %>" target="_blank" aria-label="小胡子哥的 Twitter">&#x9e1f;</a></i>
-			<!-- <i class="icon" title="Google Plus"><a href="<%- theme.social.google %>" target="_blank" aria-label="小胡子哥的 Google Plus">G+</a></i> -->
-			<i class="icon" title="Wechat"><a href="<%- url_for('/blogimgs/follow.jpg') %>" target="_blank" aria-label="小胡子哥的微信公众号">&#xe60d;</a></i>
-			<i class="icon" title="Rss"><a href="<%- theme.pages.feed %>" target="_blank" aria-label="小胡子哥的博客文章订阅地址">&#x25c8;</a></i>
+			<i class="icon" title="Twitter"><a href="<%- theme.social.twitter %>" target="_blank">&#x9e1f;</a></i>
+			<i class="icon" title="Sina Weibo"><a href="<%- theme.social.weibo %>" target="_blank">&#x535a;</a></i>
+			<i class="icon" title="Github"><a href="<%- theme.social.github %>" target="_blank">&#x2603;</a></i>
+			<i class="icon" title="Wechat"><a href="<%- url_for('/blogimgs/follow.jpg') %>" target="_blank">&#xe60d;</a></i>
+			<i class="icon" title="Rss"><a href="<%- theme.pages.feed %>" target="_blank">&#x25c8;</a></i>
 		</p>
 	</div>
 	<%- partial('_partial/search', {wrapStyle: '', inputStyle: ''}) %>
