fix: remove useless code

--- a/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
@@ -3,7 +3,7 @@
   <div class="article" itemscope itemtype="http://schema.org/Article">
     <div class="post">
       <div class="bread">
-        <a href="/">小胡子哥的个人博客</a> »
+        <a href="/">小胡子哥的个人网站</a> »
         <a href="/entry/">博客</a> »
         <%- partial('post/category', {post: page}) %>
       </div>
